src/hal/hal_priv.h

/* These pointers are set by hal_init() to point to the shmem block
   and to the master data structure. All access should use these
   pointers, they takes into account the mapping of shared memory
   into either kernel or user space.  (The HAL kernel module and
   each HAL user process have their own copy of these vars,
   initialized to match that process's memory mapping.)
*/

RTAPI_BEGIN_DECLS
extern char *hal_shmem_base;
extern struct hal_data_t *hal_data;
/** The good news is that none of this linked list complexity is
    visible to the components that use this API.  Complexity here
    is a small price to pay for simplicity later.
*/

/***********************************************************************
*            PRIVATE HAL DATA STRUCTURES AND DECLARATIONS              *
************************************************************************/

// The underlying HAL pin/param data storage unit. Not normally exposed because
// we need everything to go through the getter/setter interface. However, there
// is a reason to have it for sizeof() queries.
typedef union {
    rtapi_bool _b;
    rtapi_sint _s;
    rtapi_uint _u;
    rtapi_real _r;
} halpr_data_u;
/** HAL "list element" data structure.
    This structure is used to implement generic double linked circular
    lists.  Such lists have the following characteristics:
    1) One "dummy" element that serves as the root of the list.
    2) 'next' and 'previous' pointers are never NULL.
    3) Insertion and removal of elements is clean and fast.
    4) No special case code to deal with empty lists, etc.
    5) Easy traversal of the list in either direction.
    This structure has no data, only links.  To use it, include it
    inside a larger structure.
*/
typedef struct hal_list_t {
    SHMFIELD(hal_list_t) next;  // next element in list
    SHMFIELD(hal_list_t) prev;  // previous element in list
} hal_list_t;
/** HAL "oldname" data structure.
    When a pin or parameter gets an alias, this structure is used to
    store the original name.
*/
typedef struct hal_oldname_t {
    SHMFIELD(hal_oldname_t) next_ptr;   // next struct (used for free list only)
    char name[HAL_NAME_LEN + 1];        // the original name
} hal_oldname_t;
typedef struct hal_comp_t hal_comp_t;
typedef struct hal_pin_t hal_pin_t;
typedef struct hal_sig_t hal_sig_t;
typedef struct hal_param_t hal_param_t;
typedef struct hal_funct_t hal_funct_t;
typedef struct hal_thread_t hal_thread_t;
/* Master HAL data structure
   There is a single instance of this structure in the machine.
   It resides at the base of the HAL shared memory block, where it
   can be accessed by both realtime and non-realtime versions of
   hal_lib.c.  It contains pointers (offsets) to other data items
   in the area, as well as some housekeeping data.  It is the root
   structure for all data in the HAL.
*/
typedef struct hal_data_t {
    int version;                // version code for structs, etc

    // WARNING: Do not touch these mutex lock fields. Only use the proper
    // functions halpr_mutex_acquire() and halpr_mutex_release(). See comment
    // above hal_lib.c:halpr_mutex_acquire() for functional explanation.
    rtapi_mutex_t priv_rdmutex; // Private mutex for recursive lock
                                // Important: the mutex uses reverse default
                                // which means: 0==locked, 1==unlocked
    int lockcnt;                // Lock counter (using interlocked inc/dec)
    int locklvl;                // Lock recursion level
    int locktid;                // Lock owner thread ID

    rtapi_s32 shmem_avail;                  // amount of shmem left free
    constructor pending_constructor;        // pointer to the pending constructor function
    char constructor_prefix[HAL_NAME_LEN+1];// prefix of name for new instance
    char constructor_arg[HAL_NAME_LEN+1];   // prefix of name for new instance
    int shmem_bot;                          // bottom of free shmem (first free byte)
    int shmem_top;                          // top of free shmem (1 past last free)
    SHMFIELD(hal_comp_t) comp_list_ptr;     // root of linked list of components
    SHMFIELD(hal_pin_t) pin_list_ptr;       // root of linked list of pins
    SHMFIELD(hal_sig_t) sig_list_ptr;       // root of linked list of signals
    SHMFIELD(hal_param_t) param_list_ptr;   // root of linked list of parameters
    SHMFIELD(hal_funct_t) funct_list_ptr;   // root of linked list of functions
    SHMFIELD(hal_thread_t) thread_list_ptr; // root of linked list of threads
    long base_period;                       // timer period for realtime tasks
    int threads_running;                    // non-zero if threads are started
    SHMFIELD(hal_oldname_t) oldname_free_ptr; // list of free oldname structs
    SHMFIELD(hal_comp_t) comp_free_ptr;     // list of free component structs
    SHMFIELD(hal_pin_t) pin_free_ptr;       // list of free pin structs
    SHMFIELD(hal_sig_t) sig_free_ptr;       // list of free signal structs
    SHMFIELD(hal_param_t) param_free_ptr;   // list of free parameter structs
    SHMFIELD(hal_funct_t) funct_free_ptr;   // list of free function structs
    hal_list_t funct_entry_free;            // list of free funct entry structs
    SHMFIELD(hal_thread_t) thread_free_ptr; // list of free thread structs
    int exact_base_period;                  // if set, pretend that rtapi satisfied our period request exactly
    rtapi_realtime_type_t realtime_type;    // reflects the running realtime type
    unsigned char lock;                     // hal locking, can be one of the HAL_LOCK_* types
} hal_data_t;
//
// HAL 'component' type.
// It now lives in hal.h as 'hal_comp_type_t' and the old code that included
// HALs privates and used 'compoment_type_t' will be kept alive with this
// typedef for as long as hal_priv.h is available.
// FIXME: This should be declared deprecated and retired after a grace period.
//
typedef hal_comp_type_t component_type_t;
/** HAL 'component' data structure.
    This structure contains information that is unique to a HAL component.
    An instance of this structure is added to a linked list when the
    component calls hal_init().
*/
struct hal_comp_t {
    SHMFIELD(hal_comp_t) next_ptr;   // next component in the list
    int comp_id;                     // component ID (RTAPI module id)
    int mem_id;                      // RTAPI shmem ID used by this comp
    component_type_t type;           // RT or non-RT (HAL_COMP_TYPE_*)
    int ready;                       // nonzero if ready, 0 if not
    int pid;                         // PID of component (user components only)
    void *shmem_base;                // base of shmem for this component
    char name[HAL_NAME_LEN + 1];     // component name
    constructor make;
    SHMFIELD(char) insmod_args;      // args passed to insmod when loaded
};
/** HAL 'pin' data structure.
    This structure contains information about a 'pin' object.
    The structure layout is matched in the parameter layout.
    FIXME: Merge with hal_param_t
*/
struct hal_pin_t {
    SHMFIELD(hal_pin_t) next_ptr;    // next pin in linked list
    SHMFIELD(void*) data_ptr_addr;   // address of pin data pointer
    SHMFIELD(hal_comp_t) owner_ptr;  // component that owns this pin
    SHMFIELD(hal_oldname_t) oldname; // old name if aliased, else zero
    halpr_data_u dummysig;           // if unlinked, data_ptr points here
    SHMFIELD(hal_sig_t) signal;      // signal to which pin is linked
    hal_type_t type;                 // data type
    hal_pdir_t dir;                  // pin direction
    char name[HAL_NAME_LEN + 1];     // pin name
};
/** HAL 'signal' data structure.
    This structure contains information about a 'signal' object.
*/
struct hal_sig_t {
    SHMFIELD(hal_sig_t) next_ptr;    // next signal in linked list
    SHMFIELD(void*) data_ptr;        // offset of signal value
    hal_type_t type;                 // data type
    int readers;                     // number of input pins linked
    int writers;                     // number of output pins linked
    int bidirs;                      // number of I/O pins linked
    char name[HAL_NAME_LEN + 1];     // signal name
};
/** HAL 'parameter' data structure.
    This structure contains information about a 'parameter' object.
    The structure layout is matched in the pin layout.
    FIXME: Merge with hal_pin_t
*/
struct hal_param_t {
    SHMFIELD(hal_param_t) next_ptr;  // next parameter in linked list
    SHMFIELD(void*) data_ptr;        // offset of parameter value
    SHMFIELD(hal_comp_t) owner_ptr;  // component that owns this signal
    SHMFIELD(hal_oldname_t) oldname; // old name if aliased, else zero
    halpr_data_u data;               // new API parameter storage is here, data_ptr points here too
    SHMFIELD(void*) reserved;        // reserved to match hal_pin_t layout
    hal_type_t type;                 // data type
    hal_pdir_t dir;                  // data direction
    char name[HAL_NAME_LEN + 1];     // parameter name
};
/** the HAL uses functions and threads to handle synchronization of
    code.  In general, most control systems need to read inputs,
    perform control calculations, and write outputs, in that order.
    A given component may perform one, two, or all three of those
    functions, but usually code from several components will be
    needed.  Components make that code available by exporting
    functions, then threads are used to run the functions in the
    correct order and at the appropriate rate.

    The following structures implement the function/thread portion
    of the HAL API.  There are two linked lists, one of functions,
    sorted by name, and one of threads, sorted by execution frequency.
    Each thread has a linked list of 'function entries', structs
    that identify the functions connected to that thread.
*/

struct hal_funct_t {
    SHMFIELD(hal_funct_t) next_ptr;  // next function in linked list
    SHMFIELD(hal_comp_t) owner_ptr;  // component that added this funct
    int reentrant;                   // non-zero if function is re-entrant
    int users;                       // number of threads using function
    void *arg;                       // argument for function
    void (*funct) (void *, long);    // ptr to function code
    // IMPORTANT: The pins and params are valid as seen from the context that
    // created them. For uspace that is rtapi_app and in the kernel it is the
    // kernel's module context.
    hal_sint_t runtime;              // (pin) duration of last run, in CPU cycles
    hal_sint_t maxtime;              // (param) duration of longest run, in CPU cycles
    hal_bool_t maxtime_increased;    // (param) on last call, maxtime increased
    char name[HAL_NAME_LEN + 1];     // function name
};
struct hal_thread_t {
    SHMFIELD(hal_thread_t) next_ptr; // next thread in linked list
    long int period;                 // period of the thread, in nsec
    int priority;                    // priority of the thread
    int task_id;                     // ID of the task that runs this thread
    // IMPORTANT: The pins and params are valid as seen from the context that
    // created them. For uspace that is rtapi_app and in the kernel it is the
    // kernel's module context.
    hal_sint_t runtime;              // (pin) duration of last run, in ns
    hal_sint_t maxtime;              // (param) duration of longest run, in ns
    hal_sint_t threadbeat;           // (pin) visible monotonic loop beat counter
    rtapi_sint beatcnt;              // Thread monotonic increasing loop beat counter (so we don't need to read/write volatile)
    hal_list_t funct_list;           // list of functions to run
    hal_list_t init_funct_list;      // list of init functions, run once before first cyclic cycle
    int init_done;                   // 0 = init pending, 1 = init cycle has executed
    char name[HAL_NAME_LEN + 1];     // thread name
    int comp_id;
};
/** The 'find_xxx_by_name()' functions search the appropriate list for
    an object that matches 'name'.  They return a pointer to the object,
    or NULL if no matching object is found.
*/
extern hal_comp_t *halpr_find_comp_by_name(const char *name);
extern hal_pin_t *halpr_find_pin_by_name(const char *name);
extern hal_sig_t *halpr_find_sig_by_name(const char *name);
extern hal_param_t *halpr_find_param_by_name(const char *name);
extern hal_thread_t *halpr_find_thread_by_name(const char *name);
extern hal_funct_t *halpr_find_funct_by_name(const char *name);
/** 'find_comp_by_id()' searches the component list for an object whose
    component ID matches 'id'.  It returns a pointer to that component,
    or NULL if no match is found.
*/
extern hal_comp_t *halpr_find_comp_by_id(int id);
/** The 'find_xxx_by_owner()' functions find objects owned by a specific
    component.  If 'start' is NULL, they start at the beginning of the
    appropriate list, and return the first item owned by 'comp'.
    Otherwise they assume that 'start' is the value returned by a prior
    call, and return the next matching item.  If no match is found, they
    return NULL.
*/
extern hal_pin_t *halpr_find_pin_by_owner(hal_comp_t *owner, hal_pin_t *start);
extern hal_param_t *halpr_find_param_by_owner(hal_comp_t *owner, hal_param_t *start);
extern hal_funct_t *halpr_find_funct_by_owner(hal_comp_t *owner, hal_funct_t *start);
/** 'find_pin_by_sig()' finds pin(s) that are linked to a specific signal.
    If 'start' is NULL, it starts at the beginning of the pin list, and
    returns the first pin that is linked to 'sig'.  Otherwise it assumes
    that 'start' is the value returned by a previous call, and it returns
    the next matching pin.  If no match is found, it returns NULL
*/
extern hal_pin_t *halpr_find_pin_by_sig(hal_sig_t * sig, hal_pin_t * start);